unpackaged/main/default/objects/Activity_Participation__c/Activity_Participation__c.object-meta.xml
<CustomObject>
    <label>Activity Participation</label>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>Activity Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Participation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>