unpackaged/main/default/objects/Activity_Participation__c/fields/Confirmed_Participation__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Participation__c</fullName>
    <formula>IF(ISPICKVAL(Engagement_Attendee__r.Attendee_Type__c , &#39;Guest&#39;) , 
   AND(ISPICKVAL( Engagement_Attendee__r.Associated_Attendee__r.Attendance_Status__c , &#39;Confirmed&#39;) , 
       ISPICKVAL( Engagement_Attendee__r.Attendance_Status__c , &#39;Confirmed&#39;)) ,
   ISPICKVAL( Engagement_Attendee__r.Attendance_Status__c , &#39;Confirmed&#39;))</formula>
    <label>Confirmed Participation</label>
    <type>Checkbox</type>
</CustomField>