unpackaged/main/default/objects/Activity_Participation__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Activity Participation</relationshipLabel>
    <relationshipName>Activity_Participation</relationshipName>
    <type>Lookup</type>
</CustomField>