unpackaged/main/default/objects/Activity_Participation__c/fields/Engagement_Activity__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Activity__c</fullName>
    <label>Engagement Activity</label>
    <referenceTo>Engagement_Activity__c</referenceTo>
    <relationshipLabel>Activity Participation</relationshipLabel>
    <relationshipName>Activity_Participation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>