unpackaged/main/default/objects/Activity_Participation__c/fields/Engagement_Id__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Id__c</fullName>
    <formula>IF(
    ISBLANK( Engagement_Activity__c ),
    Engagement_Attendee__r.Engagement__r.Id,
    Engagement_Activity__r.Engagement__r.Id
)</formula>
    <label>Engagement Id</label>
    <type>Text</type>
</CustomField>