unpackaged/main/default/objects/Activity_Participation__c/fields/Primary_Attendee_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Attendee_Code__c</fullName>
    <formula>IF( 
 ISBLANK( Engagement_Attendee__r.Associated_Attendee__c ), Engagement_Attendee__r.Attendee_Code__c,
 Engagement_Attendee__r.Associated_Attendee__r.Attendee_Code__c
)</formula>
    <label>Primary Attendee Code</label>
    <type>Text</type>
</CustomField>