unpackaged/main/default/objects/Activity_Participation__c/fields/Total_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Participants__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Total Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>